--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^12.9.2",
     "lucide-react": "^0.503.0",
+    "mongodb": "^6.16.0",
     "next": "15.3.1",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
